# numCpp_Contrib

./: CMakeLists.txt  README.md  customKernels.cuh  main.cu  npFunctions.cuh  npGPUArray.cuh  npRandom.cuh  numC.sln
include/numC/: customKernels.cuh  errorCheckUtils.cuh  gpuConfig.cuh  npFunctions.cuh  npGPUArray.cuh  npRandom.cuh  utils.cuh
include/numC++/: customKernels.cuh  npGPUArray.cuh
numC/: arrayGPU.hpp  customKernels.cuh  main.cu  npFunctions.cuh  npGPUArray.cuh  npRandom.cuh  numC.vcxproj  resource.h
src/: customKernels.cuh  errorCheckUtils.cuh  gpuConfig.cu  npFunctions.cuh  npGPUArray.cuh  npRandom.cuh
